--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,7 @@
 html {
     font-family: Verdana;
     text-align: center;
+    color: white;
 }
 
 body {
@@ -9,11 +10,25 @@ body {
 
 h1 {
     font-size: 50px;
-    color: white;
     font-weight: normal;
 }
 
 a {
     color:aquamarine;
     font-size: 16px;
+}
+
+h2 {
+    font-weight: 300;
+    font-size: 42px;
+}
+
+p {
+    color: gray;
+    font-size: 21px;
+}
+
+#copyright {
+    text-align: right;
+    color: gray;
 }
